--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="row">
                 <div class="small-12 medium-6 columns">
                     <div class="your-class">
-                        <div><img src="/img/oculus-white.svg" class="header-image"/></div>
-                        <div><img src="/img/sense-white.svg" class="header-image"/></div>
+                        <div><img src="img/oculus-white.svg" class="header-image"/></div>
+                        <div><img src="img/sense-white.svg" class="header-image"/></div>
                     </div>
                     
                     
