--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             
             
         </section>
-        <script src="/js/vendor/jquery.js"></script>
-        <script src="/js/vendor/fastclick.js"></script>
-        <script src="/js/foundation.min.js"></script>
+        <script src="js/vendor/jquery.js"></script>
+        <script src="js/vendor/fastclick.js"></script>
+        <script src="js/foundation.min.js"></script>
         <script type="text/javascript" src="slick/slick.min.js"></script>
         <script>
             $(document).foundation();
