--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Handson.io - Prototyping Oculus</title>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <!-- 3rd party plugins -->
-        <script src="/js/vendor/modernizr.js"></script>
+        <script src="js/vendor/modernizr.js"></script>
         <!-- responsive -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/foundation.css">
